; ModuleID = '/home/carl/AnghaBench/kphp-kdb/random/extr_random-data.c_random_work.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/random/extr_random-data.c_random_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@qtotal = common dso_local global i32 0, align 4
@qsize = common dso_local global i32 0, align 4
@B = common dso_local global i32 0, align 4
@buffer = common dso_local global i32* null, align 8
@qright = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @random_work(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  br label %3

3:                                                ; preds = %24, %1
  %4 = load i32, i32* @qtotal, align 4
  %5 = load i32, i32* @qsize, align 4
  %6 = sub nsw i32 %5, 1
  %7 = icmp slt i32 %4, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %3
  %9 = load i32, i32* %2, align 4
  %10 = icmp sgt i32 %9, 0
  br label %11

11:                                               ; preds = %8, %3
  %12 = phi i1 [ false, %3 ], [ %10, %8 ]
  br i1 %12, label %13, label %29

13:                                               ; preds = %11
  %14 = call i32 @bbs_next_random_byte(i32* @B)
  %15 = load i32*, i32** @buffer, align 8
  %16 = load i64, i64* @qright, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  store i32 %14, i32* %17, align 4
  %18 = load i64, i64* @qright, align 8
  %19 = add i64 %18, 1
  store i64 %19, i64* @qright, align 8
  %20 = load i32, i32* @qsize, align 4
  %21 = sext i32 %20 to i64
  %22 = icmp eq i64 %19, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %13
  store i64 0, i64* @qright, align 8
  br label %24

24:                                               ; preds = %23, %13
  %25 = load i32, i32* @qtotal, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* @qtotal, align 4
  %27 = load i32, i32* %2, align 4
  %28 = add nsw i32 %27, -1
  store i32 %28, i32* %2, align 4
  br label %3

29:                                               ; preds = %11
  ret void
}

declare dso_local i32 @bbs_next_random_byte(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
